--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,5 +70,6 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+   <img src="MT_faviconMT.gif"> &copy; 2017, Makerteens.com
   </body>
 </html>
