--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <!--<title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>-->
+    <title>A high school themed on Tiny House construction</title>
   </head>
 
   <body>
